# pyakiles

./: README.md  kinetic_model_thruster_plume_codex.py  pyproject.toml
.github/workflows/: ci.yml
examples/python/: README.md  fig01_potential_density.py  fig02_temperature_heatflux.py  fig03_eedf.py  fig03_eedf_slices.py
matlab_port/+akiles2d/: akiles2d.m
matlab_port/examples/: README.md  fig01_potential_density.m  fig02_temperature_heatflux.m  fig03_eedf_slices.m
matlab_port/tests_matlab/: test_akiles2d_main.m  test_ions_cold.m  test_logger.m  test_solver_solver.m
python_port/: README.md  pyproject.toml
python_port/src/akiles2d/: akiles2d.py
python_port/src/akiles2d/electrons/parabolic/: getbetar.py
python_port/src/akiles2d/electrons/parabolic/semimaxwellian/: __init__.py
python_port/src/akiles2d/ions/: __init__.py
python_port/src/akiles2d/ions/parabolic/: __init__.py
python_port/src/akiles2d/logger/: __init__.py  blank.py  log.py  title.py
python_port/src/akiles2d/postprocessor/: __init__.py
python_port/src/akiles2d/solver/: errorfcn.py
python_port/tests/: test_akiles2d_main.py  test_electrons_parabolic_utils.py  test_potential_phi.py  test_solver_errorfcn.py
scripts/: compare_results.py
src/akiles2d/: __init__.py  preprocessor.py  simrc.py
tests/: test_electrons_semimaxwellian.py  test_ions_cold.py  test_logger.py  test_preprocessor.py  test_solver_solver.py
tests_matlab/: test_electrons_parabolic_utils.m  test_electrons_semimaxwellian.m  test_potential_phi.m  test_preprocessor.m  test_solver_errorfcn.m
(+20 files in other folders)
