[project]
name = "pyakiles"
version = "0.1.0"
description = "Python translation of the AKILES2D MATLAB code"
authors = [{name = "Codex Translators", email = "ioansturzu@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "pytest",
  "matplotlib",
]

[tool.uv]
package = true

[tool.uv.sources]
pyakiles = { path = "src" }

